--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,29 @@ span{
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
 }
+*, *:before, *:after{
+    box-sizing: inherit;
+}
+
 body {
     font-size: 16px;
     font-family: 'Krub', sans-serif;
+}
+
+h1{
+    font-size: 3.8rem;
+}
+h2{
+    font-size: 2.8rem;
+}
+h3{
+    font-size: 1.8rem;
+}
+
+h1,h2,h3 {
+    text-align: center;
 }
 /*h1{
     text-align: center;
@@ -117,5 +136,28 @@ h1 span{
 .hero{
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+}
+
+.contenido-hero{
+    position: absolute;
+    background-color: rgba(0,0,0, .7); /**Anterior**/
+    /**background-color: rgb(0 0 0 / 70%);**/
+    
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
 }
 
