--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ span{
     --primario: #FFC107;
     --secundario: #0097A7;
     --gris: #757575;
+    --grisClaro: #DFE9E3;
 
 
 }
@@ -19,15 +20,74 @@ span{
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
 }
+/** Scroll Snaps**/
+.servicios,
+.navegacion-principal,
+.formulario{
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 *, *:before, *:after{
     box-sizing: inherit;
+    
 }
 
 body {
     font-size: 16px;
     font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
+
 }
+
+.contenedor{
+    max-width: 120rem;
+    /*margin-top:0 ;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;*/
+
+    margin: 0 auto 0 auto;
+
+}
+
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+    border: none;
+}
+
+@media (min-width: 768px) {
+    .boton{
+        width: auto;
+    }
+    
+}
+.boton:hover{
+    cursor: pointer;
+}
+
+.sombra{
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(87,87,87,0.58);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(87,87,87,0.58);
+    box-shadow: 0px 5px 15px 0px rgba(87,87,87,0.58);
+    background-color: var(--blanco);
+    padding: 2rem;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+}
+
 
 h1{
     font-size: 3.8rem;
@@ -58,6 +118,31 @@ h1 span{
     font-size: 2rem;
 }
 
+.w-sm-100{
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .w-sm-100{
+        width: auto;
+    }
+}
+.flex{
+    display: flex;
+
+}
+.alinear-derecha{
+    justify-content: flex-end;
+
+}
+
+
+@media (min-width: 768) {
+    .boton{
+        width: auto;
+    }
+    
+}
+
 .nav-bg{
 
     background-color: var(--secundario);
@@ -83,16 +168,7 @@ h1 span{
     
 }
 
-.contenedor{
-    max-width: 120rem;
-    /*margin-top:0 ;
-    margin-right: auto;
-    margin-bottom: 0;
-    margin-left: auto;*/
 
-    margin: 0 auto 0 auto;
-
-}
 
 .navegacion-principal a{
     color: var(--blanco);
@@ -160,4 +236,111 @@ h1 span{
 .contenido-hero p{
     color: var(--blanco);
 }
+
+.contenido-hero .ubicacion{
+    display: flex;
+    align-items: flex-end;
+}
+
+
+/** Servicios **/
+@media (min-width: 768px) {
+
+    .servicios {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        /*grid-template-columns: repeat(3, 1fr);
+        /**grid-template-columns: 300px 300px;
+        grid-template-rows: 200px 800px;**/
+    
+        /**grid: 200px 800px / 300px 300px; esto es lo mismo que lo de arriba**/
+        column-gap: 1rem;
+    
+    }
+    
+}
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formulario{
+    background-color: var(--gris);
+    width: min( 60rem, 100% );
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+.formulario fieldset{
+    border: none;
+}
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario)
+}
+@media (min-width: 768px) {
+    .contenedor-campo{
+        display: grid;
+        grid-template-columns: 50% 50% ;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;  
+    }
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+}
+.campo{
+    margin-bottom: 1rem;
+}
+.campo lebel{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+.campo textarea{
+    height: 20rem;
+}
+.input-text{
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.footer{
+    text-align: center;
+}
+
+
+
+
+
 
